--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "backend for meal planner",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "meal-planner",
@@ -17,7 +18,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.5.3",
-    "morgan": "^1.10.0",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
