--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0"
   },
