--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "griddb-node-api": "^0.8.6",
     "joi": "^17.11.0",
     "mongoose": "^7.5.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
